--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     </canvas>
 </div>
 <div style="text-align: center"><button id="startgame" onclick="startGame()" type="button" style="text-align: center; padding: 15px; margin-top: 10px">Start game.</button></div>
-<img alt="Ball" id="ballImage" src="Ball-PNG-Free-Download.png" hidden>
-<script src="script.js"></script>
+<img alt="Ball" id="ballImage" src="image/Ball-PNG-Free-Download.png" hidden>
+<script src="js/script.js"></script>
+<script src="ball.js"></script>
+<script src="bar.js"></script>
+<script src="box.js"></script>
 </body>
 </html>
